2011-08-16  ae3c49c            [RELEASE] Release of TYPO3 4.3.13 (TYPO3 v4 Release Team)
2011-08-12  e6febd7  #28847    [BUGFIX] Maintain compatibility with changed headline rendering (Helmut Hummel)
2011-08-03  d0f08cd  #26876    [BUGFIX] Unprivileged backend user can read arbitrarily from database (Helmut Hummel)
2011-07-31  25f5a87            [BUGFIX] htmlArea RTE not loading with Safari 5.1 (Stanislas Rolland)
2011-07-30  2ba1620  #28536    [BUGFIX] JSwindow-typolink URLs are encoded twice (Helmut Hummel)
2011-07-27  6380111            [TASK] Set TYPO3 version to 4.3.13-dev (TYPO3 v4 Release Team)
2011-07-27  bf3b11f            [RELEASE] Release of TYPO3 4.3.12 (TYPO3 v4 Release Team)


2011-07-27  277d945            [RELEASE] Release of TYPO3 4.3.12 (TYPO3 v4 Release Team)
2011-07-27  b1ab0e2  #24577    [BUGFIX] Untrusted GP data is unserialized in wizard_colorpicker.php and view_help.php (Christian Kuhn)
2011-07-27  875a385  #26876    [BUGFIX] Unprivileged backend user can read arbitrarily from database (Helmut Hummel)
2011-07-27  31053be  #28189    [BUGFIX] XSS in TYPO3 core when using typolink.parameter JS-Popup Window (Marco Bresch)
2011-07-27  9eb03df  #24535    [BUGFIX] XSS in tcemain flash message (Georg Ringer)
2011-07-27  9912005  #24519    [BUGFIX] XSS in Recycler (Steffen Gebert)
2011-07-27  bfef86b  #24497    [BUGFIX] XSS in browse_links (Georg Ringer)
2011-07-27  750aea8  #20775    [BUGFIX] t3lib_div::removeXSS does not remove some XSS (Jigal van Hemert)
2011-07-27  1375cc0  #21589    [BUGFIX] XSS in admin panel (Georg Ringer)
2011-07-27  105bc43  #24457    [BUGFIX] The delay if wrong credentials are provided during backend login can be circumvented (Helmut Hummel)
2011-07-27  d9411b5  #24456    [BUGFIX] Information disclosure during backend login (Helmut Hummel)
2011-07-26  c92a3ba  #28218    [BUGFIX] Value 0 in integer fields is not shown in List module anymore (Benjamin Mack)