@@ -801,7 +801,7 @@ class t3lib_parsehtml	{
 									reset($tags[$tagName]['fixAttrib']);
 									while(list($attr,$params)=each($tags[$tagName]['fixAttrib']))	{
 										if (strlen($params['set']))	$tagAttrib[0][$attr] = $params['set'];
-										if (strlen($params['unset']))	unset($tagAttrib[0][$attr]);
+										if (isset($params['unset']) && !empty($params['unset']))	unset($tagAttrib[0][$attr]);
 										if (strcmp($params['default'],'') && !isset($tagAttrib[0][$attr]))	$tagAttrib[0][$attr]=$params['default'];
 										if ($params['always'] || isset($tagAttrib[0][$attr]))	{
 											if ($params['trim'])	{$tagAttrib[0][$attr]=trim($tagAttrib[0][$attr]);}
